--- a/gym.css
+++ b/gym.css
@@ -22,6 +22,7 @@ body{
     height: 100vh;
     background: var(--color-background);
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 ::selection{
